trunk/SOURCES/ModelGenerator/LhaParser/Lha-parser.output
Terminaux inutilisés dans la grammaire

   LhaName


Grammaire

    0 $accept: LHA "end of file"

    1 LHA: declarations InitFinal definitions

    2 declarations: Sizes Constants Lists HaslExps
    3             | Sizes Lists HaslExps

    4 IntMarkingFormula: ival
    5                  | str
    6                  | LB IntMarkingFormula RB
    7                  | MINUS IntMarkingFormula
    8                  | IntMarkingFormula PLUS IntMarkingFormula
    9                  | IntMarkingFormula MINUS IntMarkingFormula
   10                  | IntMarkingFormula MUL IntMarkingFormula
   11                  | IntMarkingFormula POWER IntMarkingFormula
   12                  | FLOOR LB IntMarkingFormula RB
   13                  | FLOOR LB IntMarkingFormula DIV IntMarkingFormula RB
   14                  | MIN LB IntMarkingFormula COMMA IntMarkingFormula RB
   15                  | MAX LB IntMarkingFormula COMMA IntMarkingFormula RB

   16 RealMarkingFormula: rval
   17                   | ival
   18                   | str
   19                   | LB RealMarkingFormula RB
   20                   | MINUS RealMarkingFormula
   21                   | RealMarkingFormula DIV RealMarkingFormula
   22                   | RealMarkingFormula PLUS RealMarkingFormula
   23                   | RealMarkingFormula MINUS RealMarkingFormula
   24                   | RealMarkingFormula MUL RealMarkingFormula
   25                   | RealMarkingFormula POWER RealMarkingFormula
   26                   | FLOOR LB RealMarkingFormula RB
   27                   | MIN LB RealMarkingFormula COMMA RealMarkingFormula RB
   28                   | MAX LB RealMarkingFormula COMMA RealMarkingFormula RB

   29 RealVarMarkingFormula: rval
   30                      | ival
   31                      | str
   32                      | LB RealVarMarkingFormula RB
   33                      | MINUS RealVarMarkingFormula
   34                      | RealVarMarkingFormula DIV RealVarMarkingFormula
   35                      | RealVarMarkingFormula PLUS RealVarMarkingFormula
   36                      | RealVarMarkingFormula MINUS RealVarMarkingFormula
   37                      | RealVarMarkingFormula MUL RealVarMarkingFormula
   38                      | RealVarMarkingFormula POWER RealVarMarkingFormula
   39                      | FLOOR LB RealVarMarkingFormula RB
   40                      | MIN LB RealVarMarkingFormula COMMA RealVarMarkingFormula RB
   41                      | MAX LB RealVarMarkingFormula COMMA RealVarMarkingFormula RB

   42 Sizes: NbLocations NbVariables
   43      | NbVariables NbLocations

   44 Constants: Constant
   45          | Constant Constants

   46 Constant: Const INT str EQ IntMarkingFormula SEMICOLON
   47         | Const DOUBLE str EQ RealMarkingFormula SEMICOLON

   48 NbVariables: NbVar EQ ival SEMICOLON

   49 NbLocations: NbLoc EQ ival SEMICOLON

   50 Lists: VariablesList LocationsList
   51      | LocationsList VariablesList

   52 VariablesList: VList EQ '{' VLabels '}' SEMICOLON

   53 VLabels: str
   54        | VLabels COMMA str

   55 LocationsList: LList EQ '{' LLabels '}' SEMICOLON

   56 LLabels: str
   57        | LLabels COMMA str

   58 InitFinal: init final
   59          | final init

   60 init: Iloc EQ '{' iLLabels '}' SEMICOLON

   61 iLLabels: str
   62         | iLLabels COMMA str

   63 final: Floc EQ '{' fLLabels '}' SEMICOLON

   64 fLLabels: str
   65         | fLLabels COMMA str

   66 definitions: LocationsDef EdgesDef
   67            | EdgesDef LocationsDef

   68 LocationsDef: locations EQ '{' LOCATIONS '}' SEMICOLON

   69 LOCATIONS: LOCATION
   70          | LOCATIONS LOCATION

   71 LOCATION: LB str COMMA LogExpr COMMA LB FLOWS RB RB SEMICOLON
   72         | LB str COMMA LogExpr RB SEMICOLON

   73 FLOWS: FLOW
   74      | FLOWS COMMA FLOW

   75 FLOW: str COLON RealMarkingFormula

   76 LogExpr: TRUE
   77        | FALSE
   78        | CompExpr
   79        | LogExpr AND LogExpr
   80        | LogExpr OR LogExpr
   81        | LB LogExpr RB
   82        | NOT LogExpr

   83 CompExpr: RealMarkingFormula EQ RealMarkingFormula
   84         | RealMarkingFormula LEQ RealMarkingFormula
   85         | RealMarkingFormula GEQ RealMarkingFormula
   86         | RealMarkingFormula LL RealMarkingFormula
   87         | RealMarkingFormula GG RealMarkingFormula

   88 EdgesDef: edges EQ '{' EDGES '}' SEMICOLON

   89 EDGES: EDGE
   90      | EDGE EDGES

   91 EDGE: LB LB str COMMA str RB COMMA ACTIONS COMMA CONSTRAINTS COMMA UPDATES RB SEMICOLON

   92 ACTIONS: SHARP
   93        | ALL
   94        | ALL BackSlash SetOfActions
   95        | SetOfActions

   96 SetOfActions: '{' Actions '}'

   97 Actions: str
   98        | Actions COMMA str

   99 CONSTRAINTS: CONSTRAINT
  100            | CONSTRAINT AND CONSTRAINTS
  101            | SHARP

  102 CONSTRAINT: LinearExp EQ RealMarkingFormula
  103           | LinearExp LEQ RealMarkingFormula
  104           | LinearExp GEQ RealMarkingFormula

  105 LinearExp: term
  106          | LinearExp MINUS term
  107          | LinearExp PLUS term

  108 term: str
  109     | LB RealMarkingFormula RB MUL str
  110     | ival MUL str
  111     | rval MUL str
  112     | str MUL str
  113     | MINUS str
  114     | MINUS LB RealMarkingFormula RB MUL str
  115     | MINUS ival MUL str
  116     | MINUS rval MUL str
  117     | MINUS str MUL str

  118 UPDATES: '{' Updates '}'
  119        | SHARP

  120 Updates: Update
  121        | Updates COMMA Update

  122 Update: str EQ RealVarMarkingFormula
  123       | str EQ LIKELIHOOD MUL str

  124 HaslExps: HaslExp
  125         | HaslExp HaslExps

  126 HaslExp: str EQ AVG LB AlgExpr RB SEMICOLON
  127        | AVG LB AlgExpr RB SEMICOLON

  128 AlgExpr: LhaFunc
  129        | MIN LB AlgExpr COMMA AlgExpr RB
  130        | MAX LB AlgExpr COMMA AlgExpr RB
  131        | MINUS AlgExpr
  132        | FLOOR LB AlgExpr RB
  133        | LB AlgExpr RB
  134        | AlgExpr POWER AlgExpr
  135        | AlgExpr PLUS AlgExpr
  136        | AlgExpr MINUS AlgExpr
  137        | AlgExpr MUL AlgExpr
  138        | AlgExpr DIV AlgExpr

  139 LhaFunc: LAST LB LinForm RB
  140        | LhaMIN LB LinForm RB
  141        | LhaMAX LB LinForm RB
  142        | INTEGRAL LB LinForm RB

  143 LinForm: VarTerm
  144        | LinForm MINUS VarTerm
  145        | LinForm PLUS VarTerm

  146 VarTerm: str
  147        | LB RealMarkingFormula RB MUL str
  148        | ival MUL str
  149        | rval MUL str
  150        | str MUL str
  151        | MINUS str
  152        | MINUS LB RealMarkingFormula RB MUL str
  153        | MINUS ival MUL str
  154        | MINUS rval MUL str
  155        | MINUS str MUL str


Terminaux, suivis des règles où ils apparaissent

"end of file" (0) 0
'{' (123) 52 55 60 63 68 88 96 118
'}' (125) 52 55 60 63 68 88 96 118
error (256)
str (258) 5 18 31 46 47 53 54 56 57 61 62 64 65 71 72 75 91 97 98 108
    109 110 111 112 113 114 115 116 117 122 123 126 146 147 148 149
    150 151 152 153 154 155
rval (259) 16 29 111 116 149 154
ival (260) 4 17 30 48 49 110 115 148 153
SEMICOLON (261) 46 47 48 49 52 55 60 63 68 71 72 88 91 126 127
COLON (262) 75
COMMA (263) 14 15 27 28 40 41 54 57 62 65 71 72 74 91 98 121 129 130
LB (264) 6 12 13 14 15 19 26 27 28 32 39 40 41 71 72 81 91 109 114
    126 127 129 130 132 133 139 140 141 142 147 152
RB (265) 6 12 13 14 15 19 26 27 28 32 39 40 41 71 72 81 91 109 114
    126 127 129 130 132 133 139 140 141 142 147 152
SHARP (266) 92 101 119
ALL (267) 93 94
BackSlash (268) 94
EQ (269) 46 47 48 49 52 55 60 63 68 83 88 102 122 123 126
GEQ (270) 85 104
LEQ (271) 84 103
LL (272) 86
GG (273) 87
AND (274) 79 100
OR (275) 80
NOT (276) 82
TRUE (277) 76
FALSE (278) 77
DOUBLE (279) 47
INT (280) 46
DIV (281) 13 21 34 138
MUL (282) 10 24 37 109 110 111 112 114 115 116 117 123 137 147 148
    149 150 152 153 154 155
PLUS (283) 8 22 35 107 135 145
MINUS (284) 7 9 20 23 33 36 106 113 114 115 116 117 131 136 144 151
    152 153 154 155
POWER (285) 11 25 38 134
FLOOR (286) 12 13 26 39 132
MIN (287) 14 27 40 129
MAX (288) 15 28 41 130
LhaMIN (289) 140
LhaMAX (290) 141
AVG (291) 126 127
LAST (292) 139
INTEGRAL (293) 142
LhaName (294)
Const (295) 46 47
NbLoc (296) 49
NbVar (297) 48
VList (298) 52
LList (299) 55
Iloc (300) 60
Floc (301) 63
locations (302) 68
edges (303) 88
LIKELIHOOD (304) 123
NEG (305)


Non-terminaux, suivis des règles où ils apparaissent

$accept (53)
    à gauche: 0
LHA (54)
    à gauche: 1, à droite: 0
declarations (55)
    à gauche: 2 3, à droite: 1
IntMarkingFormula (56)
    à gauche: 4 5 6 7 8 9 10 11 12 13 14 15, à droite: 6 7 8 9 10
    11 12 13 14 15 46
RealMarkingFormula (57)
    à gauche: 16 17 18 19 20 21 22 23 24 25 26 27 28, à droite: 19
    20 21 22 23 24 25 26 27 28 47 75 83 84 85 86 87 102 103 104 109
    114 147 152
RealVarMarkingFormula (58)
    à gauche: 29 30 31 32 33 34 35 36 37 38 39 40 41, à droite: 32
    33 34 35 36 37 38 39 40 41 122
Sizes (59)
    à gauche: 42 43, à droite: 2 3
Constants (60)
    à gauche: 44 45, à droite: 2 45
Constant (61)
    à gauche: 46 47, à droite: 44 45
NbVariables (62)
    à gauche: 48, à droite: 42 43
NbLocations (63)
    à gauche: 49, à droite: 42 43
Lists (64)
    à gauche: 50 51, à droite: 2 3
VariablesList (65)
    à gauche: 52, à droite: 50 51
VLabels (66)
    à gauche: 53 54, à droite: 52 54
LocationsList (67)
    à gauche: 55, à droite: 50 51
LLabels (68)
    à gauche: 56 57, à droite: 55 57
InitFinal (69)
    à gauche: 58 59, à droite: 1
init (70)
    à gauche: 60, à droite: 58 59
iLLabels (71)
    à gauche: 61 62, à droite: 60 62
final (72)
    à gauche: 63, à droite: 58 59
fLLabels (73)
    à gauche: 64 65, à droite: 63 65
definitions (74)
    à gauche: 66 67, à droite: 1
LocationsDef (75)
    à gauche: 68, à droite: 66 67
LOCATIONS (76)
    à gauche: 69 70, à droite: 68 70
LOCATION (77)
    à gauche: 71 72, à droite: 69 70
FLOWS (78)
    à gauche: 73 74, à droite: 71 74
FLOW (79)
    à gauche: 75, à droite: 73 74
LogExpr (80)
    à gauche: 76 77 78 79 80 81 82, à droite: 71 72 79 80 81 82
CompExpr (81)
    à gauche: 83 84 85 86 87, à droite: 78
EdgesDef (82)
    à gauche: 88, à droite: 66 67
EDGES (83)
    à gauche: 89 90, à droite: 88 90
EDGE (84)
    à gauche: 91, à droite: 89 90
ACTIONS (85)
    à gauche: 92 93 94 95, à droite: 91
SetOfActions (86)
    à gauche: 96, à droite: 94 95
Actions (87)
    à gauche: 97 98, à droite: 96 98
CONSTRAINTS (88)
    à gauche: 99 100 101, à droite: 91 100
CONSTRAINT (89)
    à gauche: 102 103 104, à droite: 99 100
LinearExp (90)
    à gauche: 105 106 107, à droite: 102 103 104 106 107
term (91)
    à gauche: 108 109 110 111 112 113 114 115 116 117, à droite:
    105 106 107
UPDATES (92)
    à gauche: 118 119, à droite: 91
Updates (93)
    à gauche: 120 121, à droite: 118 121
Update (94)
    à gauche: 122 123, à droite: 120 121
HaslExps (95)
    à gauche: 124 125, à droite: 2 3 125
HaslExp (96)
    à gauche: 126 127, à droite: 124 125
AlgExpr (97)
    à gauche: 128 129 130 131 132 133 134 135 136 137 138, à droite:
    126 127 129 130 131 132 133 134 135 136 137 138
LhaFunc (98)
    à gauche: 139 140 141 142, à droite: 128
LinForm (99)
    à gauche: 143 144 145, à droite: 139 140 141 142 144 145
VarTerm (100)
    à gauche: 146 147 148 149 150 151 152 153 154 155, à droite:
    143 144 145


état 0

    0 $accept: . LHA "end of file"

    NbLoc  décalage et aller à l'état 1
    NbVar  décalage et aller à l'état 2

    LHA           aller à l'état 3
    declarations  aller à l'état 4
    Sizes         aller à l'état 5
    NbVariables   aller à l'état 6
    NbLocations   aller à l'état 7


état 1

   49 NbLocations: NbLoc . EQ ival SEMICOLON

    EQ  décalage et aller à l'état 8


état 2

   48 NbVariables: NbVar . EQ ival SEMICOLON

    EQ  décalage et aller à l'état 9


état 3

    0 $accept: LHA . "end of file"

    "end of file"  décalage et aller à l'état 10


état 4

    1 LHA: declarations . InitFinal definitions

    Iloc  décalage et aller à l'état 11
    Floc  décalage et aller à l'état 12

    InitFinal  aller à l'état 13
    init       aller à l'état 14
    final      aller à l'état 15


état 5

    2 declarations: Sizes . Constants Lists HaslExps
    3             | Sizes . Lists HaslExps

    Const  décalage et aller à l'état 16
    VList  décalage et aller à l'état 17
    LList  décalage et aller à l'état 18

    Constants      aller à l'état 19
    Constant       aller à l'état 20
    Lists          aller à l'état 21
    VariablesList  aller à l'état 22
    LocationsList  aller à l'état 23


état 6

   43 Sizes: NbVariables . NbLocations

    NbLoc  décalage et aller à l'état 1

    NbLocations  aller à l'état 24


état 7

   42 Sizes: NbLocations . NbVariables

    NbVar  décalage et aller à l'état 2

    NbVariables  aller à l'état 25


état 8

   49 NbLocations: NbLoc EQ . ival SEMICOLON

    ival  décalage et aller à l'état 26


état 9

   48 NbVariables: NbVar EQ . ival SEMICOLON

    ival  décalage et aller à l'état 27


état 10

    0 $accept: LHA "end of file" .

    $défaut  accepter


état 11

   60 init: Iloc . EQ '{' iLLabels '}' SEMICOLON

    EQ  décalage et aller à l'état 28


état 12

   63 final: Floc . EQ '{' fLLabels '}' SEMICOLON

    EQ  décalage et aller à l'état 29


état 13

    1 LHA: declarations InitFinal . definitions

    locations  décalage et aller à l'état 30
    edges      décalage et aller à l'état 31

    definitions   aller à l'état 32
    LocationsDef  aller à l'état 33
    EdgesDef      aller à l'état 34


état 14

   58 InitFinal: init . final

    Floc  décalage et aller à l'état 12

    final  aller à l'état 35


état 15

   59 InitFinal: final . init

    Iloc  décalage et aller à l'état 11

    init  aller à l'état 36


état 16

   46 Constant: Const . INT str EQ IntMarkingFormula SEMICOLON
   47         | Const . DOUBLE str EQ RealMarkingFormula SEMICOLON

    DOUBLE  décalage et aller à l'état 37
    INT     décalage et aller à l'état 38


état 17

   52 VariablesList: VList . EQ '{' VLabels '}' SEMICOLON

    EQ  décalage et aller à l'état 39


état 18

   55 LocationsList: LList . EQ '{' LLabels '}' SEMICOLON

    EQ  décalage et aller à l'état 40


état 19

    2 declarations: Sizes Constants . Lists HaslExps

    VList  décalage et aller à l'état 17
    LList  décalage et aller à l'état 18

    Lists          aller à l'état 41
    VariablesList  aller à l'état 22
    LocationsList  aller à l'état 23


état 20

   44 Constants: Constant .
   45          | Constant . Constants

    Const  décalage et aller à l'état 16

    $défaut  réduction par utilisation de la règle 44 (Constants)

    Constants  aller à l'état 42
    Constant   aller à l'état 20


état 21

    3 declarations: Sizes Lists . HaslExps

    str  décalage et aller à l'état 43
    AVG  décalage et aller à l'état 44

    HaslExps  aller à l'état 45
    HaslExp   aller à l'état 46


état 22

   50 Lists: VariablesList . LocationsList

    LList  décalage et aller à l'état 18

    LocationsList  aller à l'état 47


état 23

   51 Lists: LocationsList . VariablesList

    VList  décalage et aller à l'état 17

    VariablesList  aller à l'état 48


état 24

   43 Sizes: NbVariables NbLocations .

    $défaut  réduction par utilisation de la règle 43 (Sizes)


état 25

   42 Sizes: NbLocations NbVariables .

    $défaut  réduction par utilisation de la règle 42 (Sizes)


état 26

   49 NbLocations: NbLoc EQ ival . SEMICOLON

    SEMICOLON  décalage et aller à l'état 49


état 27

   48 NbVariables: NbVar EQ ival . SEMICOLON

    SEMICOLON  décalage et aller à l'état 50


état 28

   60 init: Iloc EQ . '{' iLLabels '}' SEMICOLON

    '{'  décalage et aller à l'état 51


état 29

   63 final: Floc EQ . '{' fLLabels '}' SEMICOLON

    '{'  décalage et aller à l'état 52


état 30

   68 LocationsDef: locations . EQ '{' LOCATIONS '}' SEMICOLON

    EQ  décalage et aller à l'état 53


état 31

   88 EdgesDef: edges . EQ '{' EDGES '}' SEMICOLON

    EQ  décalage et aller à l'état 54


état 32

    1 LHA: declarations InitFinal definitions .

    $défaut  réduction par utilisation de la règle 1 (LHA)


état 33

   66 definitions: LocationsDef . EdgesDef

    edges  décalage et aller à l'état 31

    EdgesDef  aller à l'état 55


état 34

   67 definitions: EdgesDef . LocationsDef

    locations  décalage et aller à l'état 30

    LocationsDef  aller à l'état 56


état 35

   58 InitFinal: init final .

    $défaut  réduction par utilisation de la règle 58 (InitFinal)


état 36

   59 InitFinal: final init .

    $défaut  réduction par utilisation de la règle 59 (InitFinal)


état 37

   47 Constant: Const DOUBLE . str EQ RealMarkingFormula SEMICOLON

    str  décalage et aller à l'état 57


état 38

   46 Constant: Const INT . str EQ IntMarkingFormula SEMICOLON

    str  décalage et aller à l'état 58


état 39

   52 VariablesList: VList EQ . '{' VLabels '}' SEMICOLON

    '{'  décalage et aller à l'état 59


état 40

   55 LocationsList: LList EQ . '{' LLabels '}' SEMICOLON

    '{'  décalage et aller à l'état 60


état 41

    2 declarations: Sizes Constants Lists . HaslExps

    str  décalage et aller à l'état 43
    AVG  décalage et aller à l'état 44

    HaslExps  aller à l'état 61
    HaslExp   aller à l'état 46


état 42

   45 Constants: Constant Constants .

    $défaut  réduction par utilisation de la règle 45 (Constants)


état 43

  126 HaslExp: str . EQ AVG LB AlgExpr RB SEMICOLON

    EQ  décalage et aller à l'état 62


état 44

  127 HaslExp: AVG . LB AlgExpr RB SEMICOLON

    LB  décalage et aller à l'état 63


état 45

    3 declarations: Sizes Lists HaslExps .

    $défaut  réduction par utilisation de la règle 3 (declarations)


état 46

  124 HaslExps: HaslExp .
  125         | HaslExp . HaslExps

    str  décalage et aller à l'état 43
    AVG  décalage et aller à l'état 44

    $défaut  réduction par utilisation de la règle 124 (HaslExps)

    HaslExps  aller à l'état 64
    HaslExp   aller à l'état 46


état 47

   50 Lists: VariablesList LocationsList .

    $défaut  réduction par utilisation de la règle 50 (Lists)


état 48

   51 Lists: LocationsList VariablesList .

    $défaut  réduction par utilisation de la règle 51 (Lists)


état 49

   49 NbLocations: NbLoc EQ ival SEMICOLON .

    $défaut  réduction par utilisation de la règle 49 (NbLocations)


état 50

   48 NbVariables: NbVar EQ ival SEMICOLON .

    $défaut  réduction par utilisation de la règle 48 (NbVariables)


état 51

   60 init: Iloc EQ '{' . iLLabels '}' SEMICOLON

    str  décalage et aller à l'état 65

    iLLabels  aller à l'état 66


état 52

   63 final: Floc EQ '{' . fLLabels '}' SEMICOLON

    str  décalage et aller à l'état 67

    fLLabels  aller à l'état 68


état 53

   68 LocationsDef: locations EQ . '{' LOCATIONS '}' SEMICOLON

    '{'  décalage et aller à l'état 69


état 54

   88 EdgesDef: edges EQ . '{' EDGES '}' SEMICOLON

    '{'  décalage et aller à l'état 70


état 55

   66 definitions: LocationsDef EdgesDef .

    $défaut  réduction par utilisation de la règle 66 (definitions)


état 56

   67 definitions: EdgesDef LocationsDef .

    $défaut  réduction par utilisation de la règle 67 (definitions)


état 57

   47 Constant: Const DOUBLE str . EQ RealMarkingFormula SEMICOLON

    EQ  décalage et aller à l'état 71


état 58

   46 Constant: Const INT str . EQ IntMarkingFormula SEMICOLON

    EQ  décalage et aller à l'état 72


état 59

   52 VariablesList: VList EQ '{' . VLabels '}' SEMICOLON

    str  décalage et aller à l'état 73

    VLabels  aller à l'état 74


état 60

   55 LocationsList: LList EQ '{' . LLabels '}' SEMICOLON

    str  décalage et aller à l'état 75

    LLabels  aller à l'état 76


état 61

    2 declarations: Sizes Constants Lists HaslExps .

    $défaut  réduction par utilisation de la règle 2 (declarations)


état 62

  126 HaslExp: str EQ . AVG LB AlgExpr RB SEMICOLON

    AVG  décalage et aller à l'état 77


état 63

  127 HaslExp: AVG LB . AlgExpr RB SEMICOLON

    LB        décalage et aller à l'état 78
    MINUS     décalage et aller à l'état 79
    FLOOR     décalage et aller à l'état 80
    MIN       décalage et aller à l'état 81
    MAX       décalage et aller à l'état 82
    LhaMIN    décalage et aller à l'état 83
    LhaMAX    décalage et aller à l'état 84
    LAST      décalage et aller à l'état 85
    INTEGRAL  décalage et aller à l'état 86

    AlgExpr  aller à l'état 87
    LhaFunc  aller à l'état 88


état 64

  125 HaslExps: HaslExp HaslExps .

    $défaut  réduction par utilisation de la règle 125 (HaslExps)


état 65

   61 iLLabels: str .

    $défaut  réduction par utilisation de la règle 61 (iLLabels)


état 66

   60 init: Iloc EQ '{' iLLabels . '}' SEMICOLON
   62 iLLabels: iLLabels . COMMA str

    COMMA  décalage et aller à l'état 89
    '}'    décalage et aller à l'état 90


état 67

   64 fLLabels: str .

    $défaut  réduction par utilisation de la règle 64 (fLLabels)


état 68

   63 final: Floc EQ '{' fLLabels . '}' SEMICOLON
   65 fLLabels: fLLabels . COMMA str

    COMMA  décalage et aller à l'état 91
    '}'    décalage et aller à l'état 92


état 69

   68 LocationsDef: locations EQ '{' . LOCATIONS '}' SEMICOLON

    LB  décalage et aller à l'état 93

    LOCATIONS  aller à l'état 94
    LOCATION   aller à l'état 95


état 70

   88 EdgesDef: edges EQ '{' . EDGES '}' SEMICOLON

    LB  décalage et aller à l'état 96

    EDGES  aller à l'état 97
    EDGE   aller à l'état 98


état 71

   47 Constant: Const DOUBLE str EQ . RealMarkingFormula SEMICOLON

    str    décalage et aller à l'état 99
    rval   décalage et aller à l'état 100
    ival   décalage et aller à l'état 101
    LB     décalage et aller à l'état 102
    MINUS  décalage et aller à l'état 103
    FLOOR  décalage et aller à l'état 104
    MIN    décalage et aller à l'état 105
    MAX    décalage et aller à l'état 106

    RealMarkingFormula  aller à l'état 107


état 72

   46 Constant: Const INT str EQ . IntMarkingFormula SEMICOLON

    str    décalage et aller à l'état 108
    ival   décalage et aller à l'état 109
    LB     décalage et aller à l'état 110
    MINUS  décalage et aller à l'état 111
    FLOOR  décalage et aller à l'état 112
    MIN    décalage et aller à l'état 113
    MAX    décalage et aller à l'état 114

    IntMarkingFormula  aller à l'état 115


état 73

   53 VLabels: str .

    $défaut  réduction par utilisation de la règle 53 (VLabels)


état 74

   52 VariablesList: VList EQ '{' VLabels . '}' SEMICOLON
   54 VLabels: VLabels . COMMA str

    COMMA  décalage et aller à l'état 116
    '}'    décalage et aller à l'état 117


état 75

   56 LLabels: str .

    $défaut  réduction par utilisation de la règle 56 (LLabels)


état 76

   55 LocationsList: LList EQ '{' LLabels . '}' SEMICOLON
   57 LLabels: LLabels . COMMA str

    COMMA  décalage et aller à l'état 118
    '}'    décalage et aller à l'état 119


état 77

  126 HaslExp: str EQ AVG . LB AlgExpr RB SEMICOLON

    LB  décalage et aller à l'état 120


état 78

  133 AlgExpr: LB . AlgExpr RB

    LB        décalage et aller à l'état 78
    MINUS     décalage et aller à l'état 79
    FLOOR     décalage et aller à l'état 80
    MIN       décalage et aller à l'état 81
    MAX       décalage et aller à l'état 82
    LhaMIN    décalage et aller à l'état 83
    LhaMAX    décalage et aller à l'état 84
    LAST      décalage et aller à l'état 85
    INTEGRAL  décalage et aller à l'état 86

    AlgExpr  aller à l'état 121
    LhaFunc  aller à l'état 88


état 79

  131 AlgExpr: MINUS . AlgExpr

    LB        décalage et aller à l'état 78
    MINUS     décalage et aller à l'état 79
    FLOOR     décalage et aller à l'état 80
    MIN       décalage et aller à l'état 81
    MAX       décalage et aller à l'état 82
    LhaMIN    décalage et aller à l'état 83
    LhaMAX    décalage et aller à l'état 84
    LAST      décalage et aller à l'état 85
    INTEGRAL  décalage et aller à l'état 86

    AlgExpr  aller à l'état 122
    LhaFunc  aller à l'état 88


état 80

  132 AlgExpr: FLOOR . LB AlgExpr RB

    LB  décalage et aller à l'état 123


état 81

  129 AlgExpr: MIN . LB AlgExpr COMMA AlgExpr RB

    LB  décalage et aller à l'état 124


état 82

  130 AlgExpr: MAX . LB AlgExpr COMMA AlgExpr RB

    LB  décalage et aller à l'état 125


état 83

  140 LhaFunc: LhaMIN . LB LinForm RB

    LB  décalage et aller à l'état 126


état 84

  141 LhaFunc: LhaMAX . LB LinForm RB

    LB  décalage et aller à l'état 127


état 85

  139 LhaFunc: LAST . LB LinForm RB

    LB  décalage et aller à l'état 128


état 86

  142 LhaFunc: INTEGRAL . LB LinForm RB

    LB  décalage et aller à l'état 129


état 87

  127 HaslExp: AVG LB AlgExpr . RB SEMICOLON
  134 AlgExpr: AlgExpr . POWER AlgExpr
  135        | AlgExpr . PLUS AlgExpr
  136        | AlgExpr . MINUS AlgExpr
  137        | AlgExpr . MUL AlgExpr
  138        | AlgExpr . DIV AlgExpr

    RB     décalage et aller à l'état 130
    DIV    décalage et aller à l'état 131
    MUL    décalage et aller à l'état 132
    PLUS   décalage et aller à l'état 133
    MINUS  décalage et aller à l'état 134
    POWER  décalage et aller à l'état 135


état 88

  128 AlgExpr: LhaFunc .

    $défaut  réduction par utilisation de la règle 128 (AlgExpr)


état 89

   62 iLLabels: iLLabels COMMA . str

    str  décalage et aller à l'état 136


état 90

   60 init: Iloc EQ '{' iLLabels '}' . SEMICOLON

    SEMICOLON  décalage et aller à l'état 137


état 91

   65 fLLabels: fLLabels COMMA . str

    str  décalage et aller à l'état 138


état 92

   63 final: Floc EQ '{' fLLabels '}' . SEMICOLON

    SEMICOLON  décalage et aller à l'état 139


état 93

   71 LOCATION: LB . str COMMA LogExpr COMMA LB FLOWS RB RB SEMICOLON
   72         | LB . str COMMA LogExpr RB SEMICOLON

    str  décalage et aller à l'état 140


état 94

   68 LocationsDef: locations EQ '{' LOCATIONS . '}' SEMICOLON
   70 LOCATIONS: LOCATIONS . LOCATION

    LB   décalage et aller à l'état 93
    '}'  décalage et aller à l'état 141

    LOCATION  aller à l'état 142


état 95

   69 LOCATIONS: LOCATION .

    $défaut  réduction par utilisation de la règle 69 (LOCATIONS)


état 96

   91 EDGE: LB . LB str COMMA str RB COMMA ACTIONS COMMA CONSTRAINTS COMMA UPDATES RB SEMICOLON

    LB  décalage et aller à l'état 143


état 97

   88 EdgesDef: edges EQ '{' EDGES . '}' SEMICOLON

    '}'  décalage et aller à l'état 144


état 98

   89 EDGES: EDGE .
   90      | EDGE . EDGES

    LB  décalage et aller à l'état 96

    $défaut  réduction par utilisation de la règle 89 (EDGES)

    EDGES  aller à l'état 145
    EDGE   aller à l'état 98


état 99

   18 RealMarkingFormula: str .

    $défaut  réduction par utilisation de la règle 18 (RealMarkingFormula)


état 100

   16 RealMarkingFormula: rval .

    $défaut  réduction par utilisation de la règle 16 (RealMarkingFormula)


état 101

   17 RealMarkingFormula: ival .

    $défaut  réduction par utilisation de la règle 17 (RealMarkingFormula)


état 102

   19 RealMarkingFormula: LB . RealMarkingFormula RB

    str    décalage et aller à l'état 99
    rval   décalage et aller à l'état 100
    ival   décalage et aller à l'état 101
    LB     décalage et aller à l'état 102
    MINUS  décalage et aller à l'état 103
    FLOOR  décalage et aller à l'état 104
    MIN    décalage et aller à l'état 105
    MAX    décalage et aller à l'état 106

    RealMarkingFormula  aller à l'état 146


état 103

   20 RealMarkingFormula: MINUS . RealMarkingFormula

    str    décalage et aller à l'état 99
    rval   décalage et aller à l'état 100
    ival   décalage et aller à l'état 101
    LB     décalage et aller à l'état 102
    MINUS  décalage et aller à l'état 103
    FLOOR  décalage et aller à l'état 104
    MIN    décalage et aller à l'état 105
    MAX    décalage et aller à l'état 106

    RealMarkingFormula  aller à l'état 147


état 104

   26 RealMarkingFormula: FLOOR . LB RealMarkingFormula RB

    LB  décalage et aller à l'état 148


état 105

   27 RealMarkingFormula: MIN . LB RealMarkingFormula COMMA RealMarkingFormula RB

    LB  décalage et aller à l'état 149


état 106

   28 RealMarkingFormula: MAX . LB RealMarkingFormula COMMA RealMarkingFormula RB

    LB  décalage et aller à l'état 150


état 107

   21 RealMarkingFormula: RealMarkingFormula . DIV RealMarkingFormula
   22                   | RealMarkingFormula . PLUS RealMarkingFormula
   23                   | RealMarkingFormula . MINUS RealMarkingFormula
   24                   | RealMarkingFormula . MUL RealMarkingFormula
   25                   | RealMarkingFormula . POWER RealMarkingFormula
   47 Constant: Const DOUBLE str EQ RealMarkingFormula . SEMICOLON

    SEMICOLON  décalage et aller à l'état 151
    DIV        décalage et aller à l'état 152
    MUL        décalage et aller à l'état 153
    PLUS       décalage et aller à l'état 154
    MINUS      décalage et aller à l'état 155
    POWER      décalage et aller à l'état 156


état 108

    5 IntMarkingFormula: str .

    $défaut  réduction par utilisation de la règle 5 (IntMarkingFormula)


état 109

    4 IntMarkingFormula: ival .

    $défaut  réduction par utilisation de la règle 4 (IntMarkingFormula)


état 110

    6 IntMarkingFormula: LB . IntMarkingFormula RB

    str    décalage et aller à l'état 108
    ival   décalage et aller à l'état 109
    LB     décalage et aller à l'état 110
    MINUS  décalage et aller à l'état 111
    FLOOR  décalage et aller à l'état 112
    MIN    décalage et aller à l'état 113
    MAX    décalage et aller à l'état 114

    IntMarkingFormula  aller à l'état 157


état 111

    7 IntMarkingFormula: MINUS . IntMarkingFormula

    str    décalage et aller à l'état 108
    ival   décalage et aller à l'état 109
    LB     décalage et aller à l'état 110
    MINUS  décalage et aller à l'état 111
    FLOOR  décalage et aller à l'état 112
    MIN    décalage et aller à l'état 113
    MAX    décalage et aller à l'état 114

    IntMarkingFormula  aller à l'état 158


état 112

   12 IntMarkingFormula: FLOOR . LB IntMarkingFormula RB
   13                  | FLOOR . LB IntMarkingFormula DIV IntMarkingFormula RB

    LB  décalage et aller à l'état 159


état 113

   14 IntMarkingFormula: MIN . LB IntMarkingFormula COMMA IntMarkingFormula RB

    LB  décalage et aller à l'état 160


état 114

   15 IntMarkingFormula: MAX . LB IntMarkingFormula COMMA IntMarkingFormula RB

    LB  décalage et aller à l'état 161


état 115
